test/scc/expr/semantic-errors/113.t
void foo(int* a)
{
}

void test()
{
	char* a;
    foo(a);
}